[tool.black]
line-length = 120

[tool.pytest.ini_options]
pythonpath = ["src/"]
testpaths = "tests"

[tool.isort]
profile = "black"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.mypy]
exclude = ["tests"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
namespace_packages = true
warn_redundant_casts = true
warn_unused_ignores = true


[build-system]
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_app"
version = "0.0.1"
description = "An example BSGIP app"
dependencies = []

[project.optional-dependencies]
dev = ["bandit", "flake8", "mypy", "black"]
docs = ["sphinx", "sphinx-click", "sphinx-markdown-builder"]
test = ["pytest"]

[tool.setuptools.package-data]
"my_app" = ["py.typed"]
